k8s/istio/cards-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: cards-ms-vs
  namespace: banking
spec:
  hosts:
    - cards-service.banking.svc.cluster.local
  http:
    - match:
        - uri:
            prefix: /api/v1/cards
      timeout: 10s
      retries:
        attempts: 2
        retryOn: gateway-error,reset,5xx
        perTryTimeout: 5s
      route:
        - destination:
            host: cards-service.banking.svc.cluster.local
            port:
              number: 8092
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: cards-ms-dr
  namespace: banking
spec:
  host: cards-service.banking.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
    connectionPool:
      tcp:
        maxConnections: 50
      http:
        http2MaxRequests: 500
    outlierDetection:
      consecutiveGatewayErrors: 5
      interval: 10s
      baseEjectionTime: 30s
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: cards-ms-mtls
  namespace: banking
spec:
  selector:
    matchLabels:
      app: cards-ms
  mtls:
    mode: STRICT
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: cards-ms-policy
  namespace: banking
spec:
  selector:
    matchLabels:
      app: cards-ms
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/banking/sa/api-gateway-sa
      to:
        - operation:
            methods: ["GET","POST","PATCH"]
            paths:
              - /api/v1/cards
              - /api/v1/cards/*
    - from:
        - source:
            namespaces:
              - monitoring
              - istio-system
      to:
        - operation:
            paths:
              - /actuator/health
              - /actuator/prometheus
